simple/parser.output
   0  $accept : %entry% $end

   1  prog : stmt

   2  ty : INT
   3     | INT LS NUM RS
   4     | ID

   5  decs : decs dec
   6       |

   7  dec : ty ids SEMI
   8      | TYPE ID ASSIGN ty SEMI
   9      | ty ID LP fargs_opt RP block
  10      | VOID ID LP fargs_opt RP block

  11  ids : ids COMMA ID
  12      | ID

  13  fargs_opt :
  14            | fargs

  15  fargs : fargs COMMA ty ID
  16        | ty ID

  17  stmts : stmts stmt
  18        | stmt

  19  stmt : ID ASSIGN expr SEMI
  20       | ID LS expr RS ASSIGN expr SEMI
  21       | IF LP cond RP stmt
  22       | IF LP cond RP stmt ELSE stmt
  23       | WHILE LP cond RP stmt
  24       | SPRINT LP STR RP SEMI
  25       | IPRINT LP expr RP SEMI
  26       | SCAN LP ID RP SEMI
  27       | NEW LP ID RP SEMI
  28       | ID LP aargs_opt RP SEMI
  29       | RETURN expr SEMI
  30       | block
  31       | SEMI

  32  aargs_opt :
  33            | aargs

  34  aargs : aargs COMMA expr
  35        | expr

  36  block : LB decs stmts RB

  37  expr : NUM
  38       | ID
  39       | ID LP aargs_opt RP
  40       | ID LS expr RS
  41       | expr PLUS expr
  42       | expr MINUS expr
  43       | expr TIMES expr
  44       | expr DIV expr
  45       | MINUS expr
  46       | LP expr RP

  47  cond : expr EQ expr
  48       | expr NEQ expr
  49       | expr GT expr
  50       | expr LT expr
  51       | expr GE expr
  52       | expr LE expr

  53  %entry% : '\001' prog

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . prog  (53)

	ID  shift 3
	IF  shift 4
	WHILE  shift 5
	SPRINT  shift 6
	IPRINT  shift 7
	SCAN  shift 8
	RETURN  shift 9
	NEW  shift 10
	LB  shift 11
	SEMI  shift 12
	.  error

	prog  goto 13
	stmt  goto 14
	block  goto 15


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	stmt : ID . ASSIGN expr SEMI  (19)
	stmt : ID . LS expr RS ASSIGN expr SEMI  (20)
	stmt : ID . LP aargs_opt RP SEMI  (28)

	LS  shift 16
	LP  shift 17
	ASSIGN  shift 18
	.  error


state 4
	stmt : IF . LP cond RP stmt  (21)
	stmt : IF . LP cond RP stmt ELSE stmt  (22)

	LP  shift 19
	.  error


state 5
	stmt : WHILE . LP cond RP stmt  (23)

	LP  shift 20
	.  error


state 6
	stmt : SPRINT . LP STR RP SEMI  (24)

	LP  shift 21
	.  error


state 7
	stmt : IPRINT . LP expr RP SEMI  (25)

	LP  shift 22
	.  error


state 8
	stmt : SCAN . LP ID RP SEMI  (26)

	LP  shift 23
	.  error


state 9
	stmt : RETURN . expr SEMI  (29)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 28


state 10
	stmt : NEW . LP ID RP SEMI  (27)

	LP  shift 29
	.  error


state 11
	block : LB . decs stmts RB  (36)
	decs : .  (6)

	.  reduce 6

	decs  goto 30


state 12
	stmt : SEMI .  (31)

	.  reduce 31


state 13
	%entry% : '\001' prog .  (53)

	.  reduce 53


state 14
	prog : stmt .  (1)

	.  reduce 1


state 15
	stmt : block .  (30)

	.  reduce 30


state 16
	stmt : ID LS . expr RS ASSIGN expr SEMI  (20)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 31


state 17
	stmt : ID LP . aargs_opt RP SEMI  (28)
	aargs_opt : .  (32)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	RP  reduce 32

	expr  goto 32
	aargs_opt  goto 33
	aargs  goto 34


state 18
	stmt : ID ASSIGN . expr SEMI  (19)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 35


state 19
	stmt : IF LP . cond RP stmt  (21)
	stmt : IF LP . cond RP stmt ELSE stmt  (22)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 36
	cond  goto 37


state 20
	stmt : WHILE LP . cond RP stmt  (23)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 36
	cond  goto 38


state 21
	stmt : SPRINT LP . STR RP SEMI  (24)

	STR  shift 39
	.  error


state 22
	stmt : IPRINT LP . expr RP SEMI  (25)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 40


state 23
	stmt : SCAN LP . ID RP SEMI  (26)

	ID  shift 41
	.  error


state 24
	expr : NUM .  (37)

	.  reduce 37


state 25
	expr : ID .  (38)
	expr : ID . LP aargs_opt RP  (39)
	expr : ID . LS expr RS  (40)

	LS  shift 42
	LP  shift 43
	EQ  reduce 38
	NEQ  reduce 38
	GT  reduce 38
	LT  reduce 38
	GE  reduce 38
	LE  reduce 38
	PLUS  reduce 38
	MINUS  reduce 38
	TIMES  reduce 38
	DIV  reduce 38
	RS  reduce 38
	RP  reduce 38
	SEMI  reduce 38
	COMMA  reduce 38


state 26
	expr : MINUS . expr  (45)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 44


state 27
	expr : LP . expr RP  (46)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 45


state 28
	stmt : RETURN expr . SEMI  (29)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)

	PLUS  shift 46
	MINUS  shift 47
	TIMES  shift 48
	DIV  shift 49
	SEMI  shift 50
	.  error


state 29
	stmt : NEW LP . ID RP SEMI  (27)

	ID  shift 51
	.  error


state 30
	decs : decs . dec  (5)
	block : LB decs . stmts RB  (36)

	ID  shift 52
	INT  shift 53
	IF  shift 4
	WHILE  shift 5
	SPRINT  shift 6
	IPRINT  shift 7
	SCAN  shift 8
	RETURN  shift 9
	NEW  shift 10
	LB  shift 11
	SEMI  shift 12
	TYPE  shift 54
	VOID  shift 55
	.  error

	stmt  goto 56
	ty  goto 57
	dec  goto 58
	block  goto 15
	stmts  goto 59


state 31
	stmt : ID LS expr . RS ASSIGN expr SEMI  (20)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)

	PLUS  shift 46
	MINUS  shift 47
	TIMES  shift 48
	DIV  shift 49
	RS  shift 60
	.  error


state 32
	aargs : expr .  (35)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)

	PLUS  shift 46
	MINUS  shift 47
	TIMES  shift 48
	DIV  shift 49
	RP  reduce 35
	COMMA  reduce 35


state 33
	stmt : ID LP aargs_opt . RP SEMI  (28)

	RP  shift 61
	.  error


state 34
	aargs_opt : aargs .  (33)
	aargs : aargs . COMMA expr  (34)

	COMMA  shift 62
	RP  reduce 33


state 35
	stmt : ID ASSIGN expr . SEMI  (19)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)

	PLUS  shift 46
	MINUS  shift 47
	TIMES  shift 48
	DIV  shift 49
	SEMI  shift 63
	.  error


state 36
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	cond : expr . EQ expr  (47)
	cond : expr . NEQ expr  (48)
	cond : expr . GT expr  (49)
	cond : expr . LT expr  (50)
	cond : expr . GE expr  (51)
	cond : expr . LE expr  (52)

	EQ  shift 64
	NEQ  shift 65
	GT  shift 66
	LT  shift 67
	GE  shift 68
	LE  shift 69
	PLUS  shift 46
	MINUS  shift 47
	TIMES  shift 48
	DIV  shift 49
	.  error


state 37
	stmt : IF LP cond . RP stmt  (21)
	stmt : IF LP cond . RP stmt ELSE stmt  (22)

	RP  shift 70
	.  error


state 38
	stmt : WHILE LP cond . RP stmt  (23)

	RP  shift 71
	.  error


state 39
	stmt : SPRINT LP STR . RP SEMI  (24)

	RP  shift 72
	.  error


state 40
	stmt : IPRINT LP expr . RP SEMI  (25)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)

	PLUS  shift 46
	MINUS  shift 47
	TIMES  shift 48
	DIV  shift 49
	RP  shift 73
	.  error


state 41
	stmt : SCAN LP ID . RP SEMI  (26)

	RP  shift 74
	.  error


state 42
	expr : ID LS . expr RS  (40)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 75


state 43
	expr : ID LP . aargs_opt RP  (39)
	aargs_opt : .  (32)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	RP  reduce 32

	expr  goto 32
	aargs_opt  goto 76
	aargs  goto 34


state 44
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : MINUS expr .  (45)

	.  reduce 45


state 45
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : LP expr . RP  (46)

	PLUS  shift 46
	MINUS  shift 47
	TIMES  shift 48
	DIV  shift 49
	RP  shift 77
	.  error


state 46
	expr : expr PLUS . expr  (41)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 78


state 47
	expr : expr MINUS . expr  (42)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 79


state 48
	expr : expr TIMES . expr  (43)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 80


state 49
	expr : expr DIV . expr  (44)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 81


state 50
	stmt : RETURN expr SEMI .  (29)

	.  reduce 29


state 51
	stmt : NEW LP ID . RP SEMI  (27)

	RP  shift 82
	.  error


state 52
	ty : ID .  (4)
	stmt : ID . ASSIGN expr SEMI  (19)
	stmt : ID . LS expr RS ASSIGN expr SEMI  (20)
	stmt : ID . LP aargs_opt RP SEMI  (28)

	LS  shift 16
	LP  shift 17
	ASSIGN  shift 18
	ID  reduce 4


state 53
	ty : INT .  (2)
	ty : INT . LS NUM RS  (3)

	LS  shift 83
	ID  reduce 2
	SEMI  reduce 2


state 54
	dec : TYPE . ID ASSIGN ty SEMI  (8)

	ID  shift 84
	.  error


state 55
	dec : VOID . ID LP fargs_opt RP block  (10)

	ID  shift 85
	.  error


state 56
	stmts : stmt .  (18)

	.  reduce 18


state 57
	dec : ty . ids SEMI  (7)
	dec : ty . ID LP fargs_opt RP block  (9)

	ID  shift 86
	.  error

	ids  goto 87


state 58
	decs : decs dec .  (5)

	.  reduce 5


state 59
	stmts : stmts . stmt  (17)
	block : LB decs stmts . RB  (36)

	ID  shift 3
	IF  shift 4
	WHILE  shift 5
	SPRINT  shift 6
	IPRINT  shift 7
	SCAN  shift 8
	RETURN  shift 9
	NEW  shift 10
	LB  shift 11
	RB  shift 88
	SEMI  shift 12
	.  error

	stmt  goto 89
	block  goto 15


state 60
	stmt : ID LS expr RS . ASSIGN expr SEMI  (20)

	ASSIGN  shift 90
	.  error


state 61
	stmt : ID LP aargs_opt RP . SEMI  (28)

	SEMI  shift 91
	.  error


state 62
	aargs : aargs COMMA . expr  (34)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 92


state 63
	stmt : ID ASSIGN expr SEMI .  (19)

	.  reduce 19


state 64
	cond : expr EQ . expr  (47)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 93


state 65
	cond : expr NEQ . expr  (48)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 94


state 66
	cond : expr GT . expr  (49)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 95


state 67
	cond : expr LT . expr  (50)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 96


state 68
	cond : expr GE . expr  (51)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 97


state 69
	cond : expr LE . expr  (52)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 98


state 70
	stmt : IF LP cond RP . stmt  (21)
	stmt : IF LP cond RP . stmt ELSE stmt  (22)

	ID  shift 3
	IF  shift 4
	WHILE  shift 5
	SPRINT  shift 6
	IPRINT  shift 7
	SCAN  shift 8
	RETURN  shift 9
	NEW  shift 10
	LB  shift 11
	SEMI  shift 12
	.  error

	stmt  goto 99
	block  goto 15


state 71
	stmt : WHILE LP cond RP . stmt  (23)

	ID  shift 3
	IF  shift 4
	WHILE  shift 5
	SPRINT  shift 6
	IPRINT  shift 7
	SCAN  shift 8
	RETURN  shift 9
	NEW  shift 10
	LB  shift 11
	SEMI  shift 12
	.  error

	stmt  goto 100
	block  goto 15


state 72
	stmt : SPRINT LP STR RP . SEMI  (24)

	SEMI  shift 101
	.  error


state 73
	stmt : IPRINT LP expr RP . SEMI  (25)

	SEMI  shift 102
	.  error


state 74
	stmt : SCAN LP ID RP . SEMI  (26)

	SEMI  shift 103
	.  error


state 75
	expr : ID LS expr . RS  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)

	PLUS  shift 46
	MINUS  shift 47
	TIMES  shift 48
	DIV  shift 49
	RS  shift 104
	.  error


state 76
	expr : ID LP aargs_opt . RP  (39)

	RP  shift 105
	.  error


state 77
	expr : LP expr RP .  (46)

	.  reduce 46


state 78
	expr : expr . PLUS expr  (41)
	expr : expr PLUS expr .  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)

	TIMES  shift 48
	DIV  shift 49
	EQ  reduce 41
	NEQ  reduce 41
	GT  reduce 41
	LT  reduce 41
	GE  reduce 41
	LE  reduce 41
	PLUS  reduce 41
	MINUS  reduce 41
	RS  reduce 41
	RP  reduce 41
	SEMI  reduce 41
	COMMA  reduce 41


state 79
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr MINUS expr .  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)

	TIMES  shift 48
	DIV  shift 49
	EQ  reduce 42
	NEQ  reduce 42
	GT  reduce 42
	LT  reduce 42
	GE  reduce 42
	LE  reduce 42
	PLUS  reduce 42
	MINUS  reduce 42
	RS  reduce 42
	RP  reduce 42
	SEMI  reduce 42
	COMMA  reduce 42


state 80
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr TIMES expr .  (43)
	expr : expr . DIV expr  (44)

	.  reduce 43


state 81
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr DIV expr .  (44)

	.  reduce 44


state 82
	stmt : NEW LP ID RP . SEMI  (27)

	SEMI  shift 106
	.  error


state 83
	ty : INT LS . NUM RS  (3)

	NUM  shift 107
	.  error


state 84
	dec : TYPE ID . ASSIGN ty SEMI  (8)

	ASSIGN  shift 108
	.  error


state 85
	dec : VOID ID . LP fargs_opt RP block  (10)

	LP  shift 109
	.  error


state 86
	dec : ty ID . LP fargs_opt RP block  (9)
	ids : ID .  (12)

	LP  shift 110
	SEMI  reduce 12
	COMMA  reduce 12


state 87
	dec : ty ids . SEMI  (7)
	ids : ids . COMMA ID  (11)

	SEMI  shift 111
	COMMA  shift 112
	.  error


state 88
	block : LB decs stmts RB .  (36)

	.  reduce 36


state 89
	stmts : stmts stmt .  (17)

	.  reduce 17


state 90
	stmt : ID LS expr RS ASSIGN . expr SEMI  (20)

	NUM  shift 24
	ID  shift 25
	MINUS  shift 26
	LP  shift 27
	.  error

	expr  goto 113


state 91
	stmt : ID LP aargs_opt RP SEMI .  (28)

	.  reduce 28


state 92
	aargs : aargs COMMA expr .  (34)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)

	PLUS  shift 46
	MINUS  shift 47
	TIMES  shift 48
	DIV  shift 49
	RP  reduce 34
	COMMA  reduce 34


state 93
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	cond : expr EQ expr .  (47)

	PLUS  shift 46
	MINUS  shift 47
	TIMES  shift 48
	DIV  shift 49
	RP  reduce 47


state 94
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	cond : expr NEQ expr .  (48)

	PLUS  shift 46
	MINUS  shift 47
	TIMES  shift 48
	DIV  shift 49
	RP  reduce 48


state 95
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	cond : expr GT expr .  (49)

	PLUS  shift 46
	MINUS  shift 47
	TIMES  shift 48
	DIV  shift 49
	RP  reduce 49


state 96
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	cond : expr LT expr .  (50)

	PLUS  shift 46
	MINUS  shift 47
	TIMES  shift 48
	DIV  shift 49
	RP  reduce 50


state 97
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	cond : expr GE expr .  (51)

	PLUS  shift 46
	MINUS  shift 47
	TIMES  shift 48
	DIV  shift 49
	RP  reduce 51


state 98
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	cond : expr LE expr .  (52)

	PLUS  shift 46
	MINUS  shift 47
	TIMES  shift 48
	DIV  shift 49
	RP  reduce 52


99: shift/reduce conflict (shift 114, reduce 21) on ELSE
state 99
	stmt : IF LP cond RP stmt .  (21)
	stmt : IF LP cond RP stmt . ELSE stmt  (22)

	ELSE  shift 114
	$end  reduce 21
	ID  reduce 21
	IF  reduce 21
	WHILE  reduce 21
	SPRINT  reduce 21
	IPRINT  reduce 21
	SCAN  reduce 21
	RETURN  reduce 21
	NEW  reduce 21
	LB  reduce 21
	RB  reduce 21
	SEMI  reduce 21


state 100
	stmt : WHILE LP cond RP stmt .  (23)

	.  reduce 23


state 101
	stmt : SPRINT LP STR RP SEMI .  (24)

	.  reduce 24


state 102
	stmt : IPRINT LP expr RP SEMI .  (25)

	.  reduce 25


state 103
	stmt : SCAN LP ID RP SEMI .  (26)

	.  reduce 26


state 104
	expr : ID LS expr RS .  (40)

	.  reduce 40


state 105
	expr : ID LP aargs_opt RP .  (39)

	.  reduce 39


state 106
	stmt : NEW LP ID RP SEMI .  (27)

	.  reduce 27


state 107
	ty : INT LS NUM . RS  (3)

	RS  shift 115
	.  error


state 108
	dec : TYPE ID ASSIGN . ty SEMI  (8)

	ID  shift 116
	INT  shift 53
	.  error

	ty  goto 117


state 109
	dec : VOID ID LP . fargs_opt RP block  (10)
	fargs_opt : .  (13)

	ID  shift 116
	INT  shift 53
	RP  reduce 13

	ty  goto 118
	fargs_opt  goto 119
	fargs  goto 120


state 110
	dec : ty ID LP . fargs_opt RP block  (9)
	fargs_opt : .  (13)

	ID  shift 116
	INT  shift 53
	RP  reduce 13

	ty  goto 118
	fargs_opt  goto 121
	fargs  goto 120


state 111
	dec : ty ids SEMI .  (7)

	.  reduce 7


state 112
	ids : ids COMMA . ID  (11)

	ID  shift 122
	.  error


state 113
	stmt : ID LS expr RS ASSIGN expr . SEMI  (20)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)

	PLUS  shift 46
	MINUS  shift 47
	TIMES  shift 48
	DIV  shift 49
	SEMI  shift 123
	.  error


state 114
	stmt : IF LP cond RP stmt ELSE . stmt  (22)

	ID  shift 3
	IF  shift 4
	WHILE  shift 5
	SPRINT  shift 6
	IPRINT  shift 7
	SCAN  shift 8
	RETURN  shift 9
	NEW  shift 10
	LB  shift 11
	SEMI  shift 12
	.  error

	stmt  goto 124
	block  goto 15


state 115
	ty : INT LS NUM RS .  (3)

	.  reduce 3


state 116
	ty : ID .  (4)

	.  reduce 4


state 117
	dec : TYPE ID ASSIGN ty . SEMI  (8)

	SEMI  shift 125
	.  error


state 118
	fargs : ty . ID  (16)

	ID  shift 126
	.  error


state 119
	dec : VOID ID LP fargs_opt . RP block  (10)

	RP  shift 127
	.  error


state 120
	fargs_opt : fargs .  (14)
	fargs : fargs . COMMA ty ID  (15)

	COMMA  shift 128
	RP  reduce 14


state 121
	dec : ty ID LP fargs_opt . RP block  (9)

	RP  shift 129
	.  error


state 122
	ids : ids COMMA ID .  (11)

	.  reduce 11


state 123
	stmt : ID LS expr RS ASSIGN expr SEMI .  (20)

	.  reduce 20


state 124
	stmt : IF LP cond RP stmt ELSE stmt .  (22)

	.  reduce 22


state 125
	dec : TYPE ID ASSIGN ty SEMI .  (8)

	.  reduce 8


state 126
	fargs : ty ID .  (16)

	.  reduce 16


state 127
	dec : VOID ID LP fargs_opt RP . block  (10)

	LB  shift 11
	.  error

	block  goto 130


state 128
	fargs : fargs COMMA . ty ID  (15)

	ID  shift 116
	INT  shift 53
	.  error

	ty  goto 131


state 129
	dec : ty ID LP fargs_opt RP . block  (9)

	LB  shift 11
	.  error

	block  goto 132


state 130
	dec : VOID ID LP fargs_opt RP block .  (10)

	.  reduce 10


state 131
	fargs : fargs COMMA ty . ID  (15)

	ID  shift 133
	.  error


state 132
	dec : ty ID LP fargs_opt RP block .  (9)

	.  reduce 9


state 133
	fargs : fargs COMMA ty ID .  (15)

	.  reduce 15


State 99 contains 1 shift/reduce conflict.


37 terminals, 16 nonterminals
54 grammar rules, 134 states
